# ppanel-sdk

./: Cargo.toml  README.md  plugin.proto
examples/demo-plugin/: Cargo.toml  plugin.yaml
examples/demo-plugin/src/: lib.rs
examples/hello-world/: Cargo.toml  plugin.yaml
examples/hello-world/src/: lib.rs
ppanel-sdk/: Cargo.toml  build.rs
ppanel-sdk-macros/: Cargo.toml
ppanel-sdk-macros/src/: lib.rs
ppanel-sdk/src/: abi.rs  host.rs  lib.rs  prelude.rs  runtime.rs
